@@ -43,13 +43,7 @@
 
   <modules>
     <module>cacio-shared</module>
-    <module>cacio-tta</module>
-    <module>cacio-sdl</module>
-    <module>cacio-x11</module>
-    <module>cacio-escher</module>
-    <module>cacio-web</module>
     <module>cacio-wayland</module> <!-- may need to install wayland (cairo) -->
-    <module>cacio-directfb</module> <!-- may need to install directfb -->
   </modules>
 
   <distributionManagement>
@@ -68,7 +62,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.1.1</version>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -78,6 +72,19 @@
           </execution>
         </executions>
         <configuration>
+          <additionalOptions>
+            <additionalOption>-XDignore.symbol.file=true</additionalOption>
+            <additionalOption>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</additionalOption>
+            <additionalOption>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</additionalOption>
+            <additionalOption>--add-exports=java.desktop/sun.awt.event=ALL-UNNAMED</additionalOption>
+            <additionalOption>--add-exports=java.desktop/sun.font=ALL-UNNAMED</additionalOption>
+            <additionalOption>--add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED</additionalOption>
+            <additionalOption>--add-exports=java.base/sun.security.action=ALL-UNNAMED</additionalOption>
+            <additionalOption>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</additionalOption>
+            <additionalOption>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</additionalOption>
+            <additionalOption>--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED</additionalOption>
+            <additionalOption>--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED</additionalOption>
+          </additionalOptions>
           <doclint>none</doclint>
           <quiet>true</quiet>
           <verbose>false</verbose>
@@ -113,10 +120,13 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>3.8.1</version>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <source>11</source>
+            <target>11</target>
+            <compilerArgs>
+              <arg>-XDignore.symbol.file=true</arg>
+            </compilerArgs>
           </configuration>
         </plugin>
         <plugin>
@@ -124,7 +134,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.12</version>
           <configuration>
-	    <runOrder>random</runOrder>
+            <runOrder>random</runOrder>
             <systemPropertyVariables>
               <java.awt.headless>false</java.awt.headless>
               <awt.toolkit>net.java.openjdk.cacio.ctc.CTCToolkit</awt.toolkit>
